force-app/main/default/objects/public_characters__x/public_characters__x.object-meta.xml
<CustomObject>
    <externalDataSource>Friends_From_the_Trail</externalDataSource>
    <externalName>public$characters</externalName>
    <externalRepository>name</externalRepository>
    <label>Character</label>
    <pluralLabel>Characters</pluralLabel>
</CustomObject>