force-app/main/default/objects/public_characters__x/fields/visible__c.field-meta.xml
<CustomField>
    <fullName>visible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>visible</description>
    <externalDeveloperName>visible</externalDeveloperName>
    <label>visible</label>
    <type>Checkbox</type>
</CustomField>