force-app/main/default/objects/public_characters__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>name__c</columns>
    <columns>visible__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>